Finalize customer service
