# src/main/java/ibm/ra/integration/AccountResource.java
@@ -1,5 +1,7 @@
 package ibm.ra.integration;
 
+import java.util.Collection;
+import java.util.Date;
 import java.util.logging.Logger;
 
 import javax.ws.rs.GET;
@@ -8,6 +10,7 @@ import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
 import javax.ws.rs.core.MediaType;
 
+import io.swagger.annotations.ApiOperation;
 import po.model.Account;
 
 @Path("/accounts")
@@ -21,10 +24,18 @@ public class AccountResource {
 	
 	 
 	 @GET
-	 @Path(value="/ac/{accountNumber}")
+	 @Path(value="/{accountNumber}")
 	 @Produces(MediaType.APPLICATION_JSON)
 	 public Account getAccountByAccountNumber(@PathParam("accountNumber")String accountNumber) throws DALException {	
 		logger.info("Get Account By AccountNumber:"+accountNumber);
 		return accountDAO.getAccountByAccountNumber(accountNumber);
+	}
+	 
+	@GET
+	@Produces(MediaType.APPLICATION_JSON)
+	@ApiOperation(value = "Retrieve all Accounts",responseContainer = "array", response = Account.class)
+	public Collection<Account>  getAccounts() throws DALException{
+		logger.warning((new Date()).toString()+" Get all Accounts");
+ 		return accountDAO.getAccounts();
 	}
 }
